welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: reassignment to val
  if ((noDoubles) & ((die1 == die2) & (die1 != 6))) {die1 = die1 + 1; return (die + die2)}
                                                          ^withoutDoubles:3: error: not found: value die
  if ((noDoubles) & ((die1 == die2) & (die1 != 6))) {die1 = die1 + 1; return (die + die2)}
                                                                              ^withoutDoubles:4: error: reassignment to val
  else if ((noDoubles) & (die1 == die2) & (die1 == 6)) {die1 = 1 ; return die1 + die2}
                                                             ^